# CCNet

./: setup.cfg
ccnet/: __init__.py  operator.py  players.py  training.py  utils.py  vqe.py
ccnet/utils/: __init__.py  ansatz.py  quantum_states.py
