[metadata]
name = CCNet
version = 0.0.0
author = Andres Tellez Mora
author_email = andres.tellez.m13@gmail.com
description = Neural Network for Coupled Cluster Theory Problems
url = https://github.com/antelmor/CCNet
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    torch>=1.8.0
    qiskit>=1.1.0

[options.packages.find]
where = .
